--- a/html/login.html
+++ b/html/login.html
@@ -15,8 +15,8 @@
 				<h1>生日快樂</h1>
 				<form class="form" onsubmit="login(event)">
 					<input id="userName" type="text" placeholder="姓名">
-					<input id="pwd" type="password" placeholder="密码">
-					<button type="submit" id="login-button">进入</button>
+					<input id="pwd" type="password" placeholder="密碼">
+					<button type="submit" id="login-button">登入</button>
 				</form>
 			</div>
 		</div>
