--- a/html/login.html
+++ b/html/login.html
@@ -12,10 +12,10 @@
 	<div class="htmleaf-container">
 		<div class="wrapper">
 			<div class="container">
-				<h1>生日快樂</h1>
+				<h1 class="animated-text">筑寧 生日快樂</h1>
 				<form class="form" onsubmit="login(event)">
-					<input id="userName" type="text" placeholder="姓名">
-					<input id="pwd" type="password" placeholder="密碼">
+					<input id="userName" type="text" placeholder="英文簡寫">
+					<input id="pwd" type="password" placeholder="您的生日">
 					<button type="submit" id="login-button">登入</button>
 				</form>
 			</div>
