--- a/html/BirthdayCake.html
+++ b/html/BirthdayCake.html
@@ -171,8 +171,7 @@
 </div>
 <div class="happy">
 	<img src="../img/HappyBirthday3.png"> 
-  <p class="birthday-wishes"> 準時吃飯，<br>準時睡覺，<br>毫不費力地，<br>得到了新的一歲囉！<br>祝 派郎 生日快樂呀！</p>  
-  <br>
+  <p class="birthday-wishes"> 準時吃飯，準時睡覺，毫不費力地，<br>得到了新的一歲囉！<br>祝 派郎 生日快樂呀！</p>  
   <p class="birthday-wishes"> 想看到更多驚喜嗎，請點驚喜按鈕~ </p> 
   <a href="http://google.com" class="surprise-button">驚喜按鈕</a>
 </div>
