--- a/html/BirthdayCake.html
+++ b/html/BirthdayCake.html
@@ -173,7 +173,7 @@
 	<img src="../img/HappyBirthday3.png"> 
   <p class="birthday-wishes"> 準時吃飯，準時睡覺，毫不費力地，<br>得到了新的一歲囉！<br>祝 派郎 生日快樂呀！</p>  
   <p class="birthday-wishes"> 想看到更多驚喜嗎，請點驚喜按鈕~ </p> 
-  <a href="http://google.com" class="surprise-button">驚喜按鈕</a>
+  <a href="Memories.html" class="surprise-button">驚喜按鈕</a>
 </div>
 <!-- <audio src="music/2.mp3"  autoplay="autoplay" loop="loop"></audio> -->
 <ul class="bg-bubbles">
