--- a/html/Memories.html
+++ b/html/Memories.html
@@ -134,6 +134,22 @@
   <script src="../js/jquery.fullPage.min.js"></script>
   <!-- <script src="../js/auto-play.js"></script> -->
   <script src="../js/memories.js"></script>
-  <audio src="../music/3.mp3" autoplay="autoplay" loop="loop"></audio>
-</body>
+  <audio src="../music/3.mp3" autoplay="autoplay" loop="loop">  
+  </audio>
+  <script>
+    var audio = document.getElementById('audios');
+    audio.controls = false; // 隐藏默认的播放控件
+  
+    // 如果浏览器支持自动播放，则立即播放音频
+    audio.addEventListener('canplaythrough', function() {
+      audio.play();
+    });
+  
+    // 为了遵循浏览器的策略，在用户与页面进行交互后才能自动播放音频
+    document.addEventListener('click', function() {
+      if (audio.paused) {
+        audio.play();
+      }
+    });
+  </script>
 </html>
