--- a/html/BirthdayCake.html
+++ b/html/BirthdayCake.html
@@ -181,7 +181,7 @@
   // 頁面載入完成後，啟動計時器
   window.onload = function() {
     // 設置計時器，在2分鐘後執行showButton函數
-    setTimeout(showButton, 1.5 * 60 * 1000);
+    setTimeout(showButton,  20000);
   };
 
   // 顯示按鈕的函數
