--- a/html/Memories.html
+++ b/html/Memories.html
@@ -134,7 +134,9 @@
   <script src="../js/jquery.fullPage.min.js"></script>
   <!-- <script src="../js/auto-play.js"></script> -->
   <script src="../js/memories.js"></script>
-  <audio src="../music/3.mp3" autoplay="autoplay" loop="loop">  
+  <audio id="audios" controls height="100" width="100" volume="1.0">
+    <source src="../music/3.mp3" type="audio/mp3" />
+    <embed src="../music/3.mp3" />
   </audio>
   <script>
     var audio = document.getElementById('audios');
