--- a/html/Memories.html
+++ b/html/Memories.html
@@ -33,10 +33,10 @@
                 2022-08-09
             </div>
             <div class="ly-txt12">
-              我一直吵著要看妳的樣子，結果就得到此照片了 !
+              我吵著要看妳的樣子，就獲得此照片了 !
             </div>
             <div class="ly-imgbox11">
-              <img class="ly-img11" src="../img/2.jpg">
+              <img class="ly-img12" src="../img/2.jpg">
             </div>
         </div>
         <div class="ly-triangle11"></div>
