--- a/html/BirthdayCake.html
+++ b/html/BirthdayCake.html
@@ -174,14 +174,15 @@
   <p class="birthday-wishes"> 準時吃飯，準時睡覺，毫不費力地</p>  
   <p class="birthday-wishes"> 得到了新的一歲囉 ~</p>  
   <p class="birthday-wishes"> 祝 派郎 生日快樂呀！</p> 
-  <p class="birthday-wishes"> 想看到更多驚喜嗎，請等待驚喜按鈕浮現~ </p>   
+  <p class="birthday-wishes"> 想看到更多驚喜嗎 </p>   
+  <p class="birthday-wishes"> 請閉眼許願30秒，驚喜按鈕浮現呦~ </p> 
   <a href="Memories.html" class="surprise-button">驚喜按鈕</a>
 </div>
 <script>
   // 頁面載入完成後，啟動計時器
   window.onload = function() {
     // 設置計時器，在2分鐘後執行showButton函數
-    setTimeout(showButton,  20000);
+    setTimeout(showButton,  30000);
   };
 
   // 顯示按鈕的函數
