--- a/html/Memories.html
+++ b/html/Memories.html
@@ -28,7 +28,7 @@
       <div class="section">
         <div class="timeline"></div>
         <div class="timepoint11"></div>
-        <div class="ly-box11">
+        <div class="ly-box12">
             <div class="ly-txt11">
                 2022-08-09
             </div>
@@ -65,7 +65,7 @@
       <div class="section">
         <div class="timeline"></div>
         <div class="timepoint11"></div>
-        <div class="ly-box11">
+        <div class="ly-box13">
             <div class="ly-txt11">
                 2022-12-14
             </div>
@@ -89,7 +89,7 @@
           2023-01-01
       </div>
       <div class="ly-txt12">
-        一起分享完跨年煙火影片，獨自過寒流 QAQ 
+        一起分享完跨年煙火影片，獨自過寒流的妳 QAQ 
       </div>
       <div class="ly-imgbox11">
         <img class="ly-img11" src="../img/5.jpg">
